prep for devoxx.be upg spring changed ehcache for caffeine heavy polish